2000-09-06  Ulrich Drepper  <drepper@redhat.com>

	* catgets/Depend: New file.  Add intl.
	* catgets/Makefile (tests): Add tst-catgets.
	(generated): Remove de.msg.
	(generated-dirs): Add de.
	Add dependency if tst-catgets output on de/libc.cat.
	* catgets/tst-catgets.c: New file.

	* po/ja.po: New file.
	* po/el.po: Update from translation team.

	* wcsmbs/Depend: New file.
	* wcsmbs/Makefile (tests): Add tst-btowc.
	(tst-btowc-ENV): Define.
	* wcsmbs/tst-btowc.c: New file.

	* sysdeps/unix/sysv/linux/_G_config.h: Moved to...
	* sysdeps/gnu/_G_config.h: ...here to be shared with Hurd.

	* sysdeps/posix/signal.c: Add sig to act.sa_mask for completeness.

	* stdlib/Makefile (tests): Add tst-bsearch.
	* stdlib/tst-bsearch.c: New file.

	* posix/getopt.c (_getopt_internal): Don't recognize an option
	name as ambiguous if it's a prefix for more than one name but the
	other struct option values are identical.

	* posix/tstgetopt.c: Add test for improved ambiguity recognition.
	Don't depend on visual inspection of the output file to recognize
	errors.
	* posix/Makefile (tstgetopt-ARGS): Add a few more parameters.

2000-09-06  Andreas Jaeger  <aj@suse.de>

	* sysdeps/alpha/soft-fp/Dist: New file.
	* sysdeps/i386/soft-fp/Dist: New file.
	* sysdeps/mips/mips64/soft-fp/Dist: New file.
	* sysdeps/mips/soft-fp/Dist: New file.
	* sysdeps/powerpc/soft-fp/Dist: New file.
	* sysdeps/sparc/sparc32/soft-fp/Dist: New file.
	* sysdeps/sparc/sparc64/soft-fp/Dist: New file.

	* sysdeps/sparc/sparc64/soft-fp/Makefile [$(subdir) = soft-fp]:
	Use sysdep_routines instead of routines to fix make dist failure.
	* sysdeps/sparc/sparc32/soft-fp/Makefile: Likewise (in commented
	out code).
	* sysdeps/powerpc/soft-fp/Makefile [$(subdir) = soft-fp]: Likewise.

	* sysdeps/mips/Makefile [$(subdir) = misc]:  Use
	sysdep_headers instead of headers for make dist.

	* sysdeps/unix/sysv/linux/mips/Makefile [$(subdir) = misc]:
	Likewise.

2000-09-06  Andreas Schwab  <schwab@suse.de>
